<resources>
    <string name="app_name">Stori Bank</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="hi_user">Hola Jim Santome</string>
    <string name="total_balance">Saldo total</string>
    <string name="total_balance_value">$1.000.000</string>
    <string name="moves">Movimientos</string>
    <string name="date_transaction">24/12/2022</string>
    <string name="detail_move_title">Detalles del movimiento</string>
    <string name="hint_email_stori">challenge_stori@stori.com</string>

    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Registrarse</string>
    <string name="title_about_you">¡Cuentanos sobre ti!</string>
    <string name="hint_name">Ingrese su nombre</string>
    <string name="rule_name">*El campo nombre debe contener al menos 2 caracteres</string>
    <string name="hint_last_name">Ingrese su apellido</string>
    <string name="rule_last_name">*El campo apellido debe contener al menos 2 caracteres</string>
    <string name="hint_email">ingrese su email</string>
    <string name="hint_input_password">Ingrese su contraseña</string>
    <string name="rule_password">*El campo contraseña debe contener al menos 6 caracteres</string>
    <string name="btn_continue">Continuar</string>
    <string name="rule_selfie">*Tomaremos una selfie para registrarlo en tu cuenta</string>
    <string name="btn_take_selfie">Tomar Selfie</string>
    <string name="message_congrats">¡Felicidades!</string>
    <string name="message_register_user_success">Tu cuenta ha sido creada exitosamente</string>
    <string name="btn_finalize_register">Finalizar Registro</string>
    <string name="message_empty_list">Aca verás tus proximos movimientos</string>





</resources>