<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_icon_Stori"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/background_home_balance"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/tv_name_user"
        android:text="@string/hi_user"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/tv_title_balance"
        android:text="@string/total_balance"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/tv_balance"
        android:text="@string/total_balance_value"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_balance"
        />


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="700dp"
        android:id="@+id/cv_moves"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        android:elevation="30dp"
        android:layout_marginVertical="50dp"
        app:layout_constraintTop_toBottomOf="@id/iv_icon_Stori"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title_moves"
                android:layout_margin="20dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/moves"
                android:textColor="@color/greyStori"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    
    
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/rv_moves"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_moves"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_empty_list"
                android:layout_margin="20dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/message_empty_list"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_moves"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>