<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Views.StartingFragment.StartingFragment">

    <ImageView
        android:id="@+id/iv_icon_Stori"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/stori_logo"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_one_line"
        android:hint="@string/hint_email_stori"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/greyStori"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/relativePsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etemail"
        app:passwordToggleDrawable="@drawable/edit_text_password_eyes_icon"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_one_line"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="@color/greyStori"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>





    <androidx.cardview.widget.CardView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="30dp"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        app:cardBackgroundColor="@color/colorStoriBank"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/relativePsw"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="13dp"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="20dp"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        app:cardBackgroundColor="@color/colorStoriBank"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="13dp"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>